<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityCreateAccount_mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/bg_white_round25"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_usbeacon" />

        <EditText
            android:id="@+id/activityCreateAccount_accountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textAutoComplete"
            android:textColor="@color/grey_1"
            android:textSize="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="24dp"
            android:background="@color/grey_1" />

        <EditText
            android:id="@+id/activityCreateAccount_passWordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/grey_2"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="24dp"
            android:background="@color/grey_1" />

        <EditText
            android:id="@+id/activityCreateAccount_confirmPassWordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/grey_2"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="24dp"
            android:background="@color/grey_1" />

        <TextView
            android:id="@+id/activityCreateAccount_settingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/state_group_alert_btn_done"
            android:gravity="center"
            android:minWidth="148dp"
            android:minHeight="48dp"
            android:padding="16dp"
            android:textColor="@color/white_1"
            android:textSize="16dp" />
    </LinearLayout>
</FrameLayout>